@@ -29,6 +29,11 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>VectorApp</mainClass>
+                    <options>
+                        <option>-Dprism.verbose=true</option>
+                        <option>-Dprism.forceGPU=true</option>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
